Fix Mailchimp spacing, fixes #1

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   color: #f2dc1a;
   background-image: url('img/header.jpg');
   background-size: cover;
-  background-position: center; 
+  background-position: center;
   text-transform: uppercase;
   min-height: 400px;
 }
@@ -91,14 +91,14 @@ body {
   display: flex;
   list-style: none;
   align-items: center;
-  margin: 0; 
+  margin: 0;
   padding: 0;
   color: black;
   background: #f2dc1a;
   flex-shrink: 1;
   min-height: 40px;
   font-size: 0.9em;
-} 
+}
 
 
 .Footer li:first-child {
@@ -128,7 +128,7 @@ body {
 
 #mc_embed_signup input {
   float: left;
-  border: none; 
+  border: none;
   padding: 4px;
 }
 
@@ -136,4 +136,12 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   background: #f2dc1a;
+}
+
+#mc_embed_signup .clear {
+  clear: both;
+}
+
+#mce-responses {
+  padding: 10px 0;
 }
